fix: various Echo overflow fixes

--- a/skinStyles/extensions/Echo/ext.echo.ui.desktop.less
+++ b/skinStyles/extensions/Echo/ext.echo.ui.desktop.less
@@ -17,6 +17,7 @@
 		> .oo-ui-popupWidget-popup {
 			> .oo-ui-popupWidget-head {
 				border-bottom-color: var( --border-color-base );
+				box-sizing: content-box; // fix overflow
 
 				> .oo-ui-iconWidget {
 					opacity: var( --opacity-icon-base );
